--- a/aboutus.html
+++ b/aboutus.html
@@ -15,9 +15,8 @@
             <li>Item 2</li>
         </ol>
         <hr/>
-        <a href="aboutus.html">About us
-        <img src="image.jpg" alt="Hen in Sky" width=500>
-        </a>
+        <a href="index.html">index
+        <img src="https://assets.goal.com/images/v3/blt2aaca933046f8b00/Cristiano%20Ronaldo%20Portugal%202024%20(4).jpg?auto=webp&format=pjpg&width=3840&quality=60" width="700">
     </body>
 </head>
 </html>
